[package]
name = "sendr"
authors = ["Rory Donaghy <rdonaghy@macalester.edu>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A CLI for email forwarding"
repository = "https://github.com/redonaghy/rustymail"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lettre = "0.10"
imap = "2.4"
clap = { version = "4.0", features = ["derive"] }
native-tls = "0.2"